--- a/templates/login1.html
+++ b/templates/login1.html
@@ -14,7 +14,7 @@
 
         <form class="form-signin" role="form" action="" method="post">
             {% csrf_token %}
-            <h2 class="form-signin-heading">系统登录</h2>
+            <h2 class="form-signin-heading text-center">系统登录</h2>
             {% if password_is_wrong %}
                 <div class="alert alert-danger">
                     <button type="button" class="close" data-dismiss="alert">×</button>
