--- a/templates/bootstrap.html
+++ b/templates/bootstrap.html
@@ -2,10 +2,8 @@
 
 {% block bootstrap3_title %}{% block title %}{% endblock %}{% endblock %}
 
-{% extends 'bootstrap3/bootstrap3.html' %}
-
 {% block bootstrap3_extra_head %}{% block extra_head %}{% endblock %}{% endblock %}
 
-{% block bootstrap3_title %}{% block title %}{% endblock %}{% endblock %}
-
 {% block bootstrap3_content %}{% block content %}{% endblock %}{% endblock %}
+
+{% block bootstrap3_extra_script %}{% block extra_script %}{% endblock %}{% endblock %}
