--- a/templates/base_site.html
+++ b/templates/base_site.html
@@ -4,6 +4,10 @@
 
 {% load bootstrap3 %}
 
+{% block extra_head %}
+
+{% endblock %}
+
 {% block content %}
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container-fluid">
@@ -50,6 +54,5 @@
 
 </div>
 
-
-
 {% endblock content %}
+
