--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 {% block side-bar %}
         <ul class="nav nav-sidebar">
             <li class="active"><a href="/ajaxtest">ajaxtest</a></li>
-            <li><a href="#">Reports</a></li>
+            <li><a href="/core_file">dutyfile</a></li>
             <li><a href="#">Analytics</a></li>
             <li><a href="#">Export</a></li>
         </ul>
